--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "用mongobd数据库实现登陆注册",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/add.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
   },
   "homepage": "https://github.com/xieliang1991/szhmaqd21_NODE#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "captchapng": "0.0.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.1.4"
   }
 }
