--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/add.js"
+    "start": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "captchapng": "0.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongodb": "^3.1.4"
+    "mongodb": "^3.1.4",
+    "xtemplate": "^4.6.1",
+    "xtpl": "^3.4.0"
   }
 }
